--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,9 @@
     --cor-do-video:blue;
     --cor-da-fotos:green;
 } */
+input, label{
+    display: none;
+}
 header{
     display: flex;
     justify-content: space-between;
@@ -38,8 +41,8 @@ header nav ul li a:hover{
     color: black;
     transition: 0.3s;
 }
-.video{
-    background: url(https://us.123rf.com/450wm/mindsparx/mindsparx2305/mindsparx230501290/203594406-native-american-indian-chief-with-headdress-and-feathers-on-grunge-background.jpg) center center no-repeat;
+.titulo{
+    background: url(https://w.forfun.com/fetch/10/10c06d36f8a6ad541539e236fd4f182a.jpeg) center center no-repeat;
     background-size: cover;
     background-color: var(--cor-do-video);
     height: 640px;
@@ -47,12 +50,10 @@ header nav ul li a:hover{
     align-items: center;
     justify-content: center;
 }
-.video iframe{
-    border-radius:3px;
-    width: 800px;
-    height: 400px;
-    border: none;
-
+.titulo h1{
+    font-size: 60px;
+    color: white;
+    margin-top: 30px;
 }
 .fotos-com-descricao{
    padding: 10px;
@@ -62,13 +63,14 @@ header nav ul li a:hover{
    justify-content: center;
 }
 .fotos-com-descricao .foto {
-    width: 600px;
+    max-width: 600px;
     height: 400px;
     border-radius: 10px;
 }
 .fotos-com-descricao .foto-1{
     background: url('../img/primeira-foto.jpg')center center no-repeat;
     background-size: cover;
+    width: 100%;
 }
 .fotos-com-descricao .foto-2{
     background: url('../img/segunda-foto.jpg')center center no-repeat;
@@ -88,6 +90,22 @@ header nav ul li a:hover{
 .fotos-com-descricao .descricao p{
     width: 500px;
     font-size: 20px;
+    padding: 10px;
+}
+.video{
+    background: url('https://lh4.googleusercontent.com/c-A11dfAkLj-VF_YYdhAw7r1Uwk3kumpiTq7IZoAIK0imt4XZVTxwR0WqPnljE2AnPckyj_XIfsUnDnwOY9bvO6LJ_CLkPwy-_Vpk_wezAooEae8kI5kt0qqjW-AOg=s0') center center no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.video iframe{
+    width: 800px;
+    height: 430px;
+    border: none;
+    border-radius: 10px;
 }
 .rodape{
     width: 100%;
