--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -153,7 +153,7 @@
     }
     .video iframe{
         width: 100%;
-        height: 100%;
+        height: 400px;
         border: none;
         border-radius: 1px;
     }
