--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -119,6 +119,7 @@
     .fotos-com-descricao .foto-1{
         background: url('../img/primeira-foto.jpg')center center no-repeat;
         background-size: cover;
+        margin-bottom: 10px;
     }
     .fotos-com-descricao .foto-2{
         background: url('../img/segunda-foto.jpg')center center no-repeat;
@@ -133,6 +134,7 @@
     .fotos-com-descricao .foto-4{
         background: url('../img/quarta-foto.jpg')center center no-repeat;
         background-size: cover;
+       
     }
     .fotos-com-descricao .descricao{
         margin-left: 40px;
@@ -142,8 +144,30 @@
         font-size: 20px;
         padding: 10px;
     }
+    .desc-1{
+        border-left: 1px solid black;
+        border-top: 1px solid black;
+        border-top-right-radius: 10px;
+    }
+    .desc-2{
+        border-bottom: 1px solid black;
+        border-right: 1px solid black;
+        margin-bottom: 10px;
+        border-bottom-left-radius: 10px;
+    }
+    .desc-3{
+        border-left: 1px solid black;
+        border-top: 1px solid black;
+        border-top-right-radius: 10px;
+        margin-top: 10px;
+    }
+    .desc-4{
+        border-bottom: 1px solid black;
+        border-right: 1px solid black;
+        margin-bottom: 10px;
+        border-bottom-left-radius: 10px;
+    }
     .video{
-        background: url('https://lh4.googleusercontent.com/c-A11dfAkLj-VF_YYdhAw7r1Uwk3kumpiTq7IZoAIK0imt4XZVTxwR0WqPnljE2AnPckyj_XIfsUnDnwOY9bvO6LJ_CLkPwy-_Vpk_wezAooEae8kI5kt0qqjW-AOg=s0') center center no-repeat;
         background-size: cover;
         width: 100%;
         height: 600px;
@@ -156,6 +180,46 @@
         height: 400px;
         border: none;
         border-radius: 1px;
+    }
+    .tribos{
+        margin: 5px;
+        display: block;
+        align-items: center;
+        justify-content: center;
+    }
+    .tribos .foto-das-tribos{
+        background: url('../img/foto-das-tribos.jpg') center center no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 300px;
+        border-radius: 10px;
+       
+    }
+    .tribos .descricao-das-tribos{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .tribos .descricao-das-tribos p{
+        width: 300px;
+        font-size: 20px;
+        margin-left: 0px;
+        margin-top: 20px;
+        
+    }
+    .tribos .descricao-das-tribos span{
+        color: rgb(15, 193, 15);
+    }
+    .localizacao{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+       background-color: #f1f2f1;
+    }
+    .localizacao img{
+        width: 300px;
+        border-radius: 10px;
     }
     .rodape{
         width: 100%;
