--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,7 +42,7 @@ header nav ul li a:hover{
     transition: 0.3s;
 }
 .titulo{
-    background: url(https://w.forfun.com/fetch/10/10c06d36f8a6ad541539e236fd4f182a.jpeg) center center no-repeat;
+    background: url('../img/fundo-inicio.jpeg') center center no-repeat;
     background-size: cover;
     background-color: var(--cor-do-video);
     height: 640px;
@@ -93,7 +93,7 @@ header nav ul li a:hover{
     padding: 10px;
 }
 .video{
-    background: url('https://lh4.googleusercontent.com/c-A11dfAkLj-VF_YYdhAw7r1Uwk3kumpiTq7IZoAIK0imt4XZVTxwR0WqPnljE2AnPckyj_XIfsUnDnwOY9bvO6LJ_CLkPwy-_Vpk_wezAooEae8kI5kt0qqjW-AOg=s0') center center no-repeat;
+    background: url('../img/parte-do-fundo-video.jpg') center center no-repeat;
     background-size: cover;
     width: 100%;
     height: 600px;
@@ -105,6 +105,39 @@ header nav ul li a:hover{
     width: 800px;
     height: 430px;
     border: none;
+    border-radius: 10px;
+}
+.tribos{
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.tribos .foto-das-tribos{
+    background: url('../img/foto-das-tribos.jpg') center center no-repeat;
+    background-size: cover;
+    width: 600px;
+    height: 600px;
+    border-radius: 10px;
+}
+.tribos .descricao-das-tribos p{
+    width: 500px;
+    font-size: 30px;
+    margin-left: 130px;
+    
+}
+.tribos .descricao-das-tribos span{
+    color: rgb(15, 193, 15);
+}
+.localizacao{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+   background-color: #f1f2f1;
+}
+.localizacao img{
+    width: 500px;
     border-radius: 10px;
 }
 .rodape{
