--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -223,10 +223,37 @@
     }
     .rodape{
         width: 100%;
-        height: 200px;
-        background-color: blueviolet;
+        height: 400px;
+        background-size: cover;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
     }
+    .rodape h2{
+            margin-right: 30px;
+            color: white;
+            background-color: rgba(21, 20, 20, 0.097);
+            font-family: 'Dancing Script', cursive;
+            margin-bottom: 10px;
+            margin-left: 40px;
+    }
+    .rodape a{
+        margin-left: 30px;
+        font-size: 30px;
+        color: white;
+        padding: 10px;
+        width: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid white;
+        border-radius: 50px;
+        margin-bottom: 10px;
+        background-color: rgba(74, 69, 69, 0.746);
+    }
+    .rodape .email{
+        width: 57px;
+    }
+    
 }
