--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -148,24 +148,32 @@
         border-left: 1px solid black;
         border-top: 1px solid black;
         border-top-right-radius: 10px;
+        margin-right: 40px;
+        border-radius: 10px;
     }
     .desc-2{
         border-bottom: 1px solid black;
         border-right: 1px solid black;
         margin-bottom: 10px;
+        border-radius: 10px;
         border-bottom-left-radius: 10px;
+        margin-right: 40px;
     }
     .desc-3{
         border-left: 1px solid black;
         border-top: 1px solid black;
         border-top-right-radius: 10px;
         margin-top: 10px;
+        margin-right: 40px;
+        border-radius: 10px;
     }
     .desc-4{
         border-bottom: 1px solid black;
         border-right: 1px solid black;
         margin-bottom: 10px;
         border-bottom-left-radius: 10px;
+        margin-right: 40px;
+        border-radius: 10px;
     }
     .video{
         background-size: cover;
@@ -188,7 +196,6 @@
         justify-content: center;
     }
     .tribos .foto-das-tribos{
-        background: url('../img/foto-das-tribos.jpg') center center no-repeat;
         background-size: cover;
         width: 100%;
         height: 300px;
