--- a/src/css/style.css
+++ b/src/css/style.css
@@ -108,17 +108,24 @@ header nav ul li a:hover{
     border-radius: 10px;
 }
 .tribos{
-    margin: 5px;
+    /* margin: 5px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
+    display: flex;
 }
 .tribos .foto-das-tribos{
-    background: url('../img/foto-das-tribos.jpg') center center no-repeat;
+    background: url('../img/povos-indigena.webp') center center no-repeat;
     background-size: cover;
-    width: 600px;
+    width: 100%;
     height: 600px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
+}
+.tribos .descricao-das-tribos{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
 }
 .tribos .descricao-das-tribos p{
     width: 500px;
