--- a/src/paginas/arma.css
+++ b/src/paginas/arma.css
@@ -7,6 +7,53 @@
     justify-content: center;
     align-items: center;
 }
+.informacao-arma{
+    width: 100%;
+    display: flex;
+    margin-top: 20px;
+}
+.informacao-arma .armas{
+    background: url('https://i.pinimg.com/736x/d6/90/c9/d690c9bb57c5c1b1dd9759e7cbc2b66f.jpg')center center no-repeat;
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+}
+.informacao-arma .armas-1{
+    background: url('../paginas/img/pedra-lanca.jpg')center center no-repeat;
+    width: 100%;
+    height: 600px;
+    background-size: cover;
+}
+.informacao-arma .descricao{
+    width: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 20px;
+}
+.informacao-arma .descricao-1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 20px;
+    background-color: #f1f2f1;
+}
+@media (max-width: 1400px){
+    .titulo-arma{
+        height: 400px;
+    }
+    .informacao-arma .armas-1{
+        height: 400px;
+    }
+    .informacao-arma .descricao p{
+        width: 500px;
+    }
+}
+.home{
+    display: none;
+}
 .titulo-arma h1{
     color: white;
     font-size: 50px;
