--- a/src/paginas/comidas-tipicas.css
+++ b/src/paginas/comidas-tipicas.css
@@ -128,6 +128,9 @@
     font-size: 20px;
 }
 @media (max-width: 500px){
+    .home{
+        display: block;
+    }
     .comida-inicio h1{
         font-size: 28px;
     }
