--- a/src/paginas/arte-indigena.css
+++ b/src/paginas/arte-indigena.css
@@ -114,7 +114,35 @@
     width: 400px;
     font-size: 25px;
 }
-
+.museo-de-arte{
+    background: url('https://conteudo.imguol.com.br//c/especiais/ecoa/_2021/marcha-indigenas/cover.jpg')center center no-repeat;
+    width: 100%;
+    height: 300px;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:rgb(228, 86, 86);
+    gap: 10px;
+}
+.museo-de-arte h2{
+    background-color: rgba(15, 87, 87, 0.486);
+    padding: 10px;
+    border-radius: 7px;
+    color: white;
+}
+.museo-de-arte a{
+    font-size: 25px;
+    color: rgb(255, 255, 255);
+    padding: 10px;
+    transition: 0.5s;
+}
+.museo-de-arte a:hover{
+    background-color: rgb(59, 53, 53);
+    border-radius: 10px;
+    color: white;
+    transition: 0.5s;
+}
 
 @media (max-width: 500px){
     .artes .arte .ceramica,.artes .arte .cesta ,.artes .arte .mascara,.artes .arte .plumaria,.artes .arte .pintura-corporal{
@@ -123,6 +151,10 @@
     }
     .home{
         display: block;
+    }
+    .museo-de-arte{
+        flex-direction: column;
+        
     }
     .artes .arte{
         width: 100%;
