--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -289,6 +289,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap: 10px;
     }
     .rodape h2{
             margin-right: 30px;
@@ -299,7 +300,7 @@
             margin-left: 40px;
     }
     .rodape a{
-        margin-left: 30px;
+        
         font-size: 30px;
         color: white;
         padding: 10px;
