--- a/src/css/style.css
+++ b/src/css/style.css
@@ -155,6 +155,7 @@ header nav ul li a:hover{
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 30px;
 }
 .rodape h2{
         margin-right: 30px;
@@ -163,7 +164,7 @@ header nav ul li a:hover{
         font-family: 'Dancing Script', cursive;
 }
 .rodape a{
-    margin-left: 30px;
+    
     font-size: 30px;
     color: white;
     padding: 10px;
