--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -144,10 +144,10 @@
         transition: 0.3s;
     }
     .titulo{
-        background: url(https://w.forfun.com/fetch/10/10c06d36f8a6ad541539e236fd4f182a.jpeg) center center no-repeat;
+        background: url(../img/fundo-inicio.jpeg) center center no-repeat;
         background-size: cover;
         background-color: var(--cor-do-video);
-        height: 640px;
+        height: 540px;
         display: flex;
         align-items: center;
         justify-content: center;
