--- a/src/paginas/arma.css
+++ b/src/paginas/arma.css
@@ -13,7 +13,7 @@
     margin-top: 20px;
 }
 .informacao-arma .armas{
-    background: url('https://i.pinimg.com/736x/d6/90/c9/d690c9bb57c5c1b1dd9759e7cbc2b66f.jpg')center center no-repeat;
+    background: url('../paginas/img/armas.jpg')center center no-repeat;
     width: 100%;
     height: 400px;
     border-radius: 10px;
