--- a/src/paginas/arte-indigena.css
+++ b/src/paginas/arte-indigena.css
@@ -2,7 +2,7 @@
     display: none;
 }
 .arte-inicio{
-    background: url('https://blog.retrobel.com.br/wp-content/uploads/2021/08/blog-3.jpg')center center no-repeat;
+    background: url('../paginas/img/arte-inicio.jpg')center center no-repeat;
     width: 100%;
     height: 400px;
     background-size: cover;
@@ -30,7 +30,7 @@
     margin-top: 10px;
 }
 .artes .arte .ceramica{
-    background: url('https://portalamazonia.com/images/p/33909/b2ap3_large_2-1.jpeg');
+    background: url('../paginas/img/ceramica.jpeg');
     width: 500px;
     height: 300px;
     border-bottom-left-radius: 10px;
@@ -40,7 +40,7 @@
     background-size: cover;
 }
 .artes .arte .cesta{
-    background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6KusbKAGXy14IyvXE_U_VSk9o49dlo_ebjQ&usqp=CAU');
+    background: url('../paginas/img/cesta.jpg');
     width: 500px;
     height: 300px;
     border-bottom-left-radius: 10px;
@@ -60,7 +60,7 @@
     background-size: cover;
 }
 .artes .arte .plumaria{
-    background: url('https://i.pinimg.com/474x/49/3c/48/493c4888b7cffe2b2c155d4d06e83c9f.jpg');
+    background: url('../paginas/img/plumaria.jpg');
     width: 500px;
     height: 300px;
     border-bottom-left-radius: 10px;
@@ -100,7 +100,7 @@
     background-size: cover;
 }
 .esposicao .imagem.img-1{
-    background: url('https://abra.com.br/wp-content/uploads/2023/09/Thumb-indigena.jpg')center center no-repeat;
+    background: url('../paginas/img/artes-mascaras.jpg')center center no-repeat;
 }
 .esposicao .descricao{
     width: 100%;
@@ -115,7 +115,7 @@
     font-size: 25px;
 }
 .museo-de-arte{
-    background: url('https://conteudo.imguol.com.br//c/especiais/ecoa/_2021/marcha-indigenas/cover.jpg')center center no-repeat;
+    background: url('../paginas/img/museo.jpg')center center no-repeat;
     width: 100%;
     height: 300px;
     background-size: cover;
