--- a/src/paginas/comidas-tipicas.css
+++ b/src/paginas/comidas-tipicas.css
@@ -2,7 +2,7 @@
     display: none;
 }
 .comida-inicio{
-    background: url('https://telaviva.com.br/wp-content/uploads/2022/01/espremendo-o-lim%C3%A3o-no-peixeIMG_2012-2-scaled.jpg')center center no-repeat;
+    background: url('../paginas/img/comida-inicio.jpg')center center no-repeat;
     width: 100%;
     height: 500px;
     background-size: cover;
