--- a/src/paginas/arma.css
+++ b/src/paginas/arma.css
@@ -40,6 +40,9 @@
     font-size: 20px;
     background-color: #f1f2f1;
 }
+.informacao-arma .descricao-1 p{
+    width: 500px;
+}
 @media (max-width: 1400px){
     .titulo-arma{
         height: 400px;
