--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -323,4 +323,9 @@
     .informacao-arma .descricao-1{
         height: 400px;
     }
+    .localizacao img{
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+    }
 }
