--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,7 +42,7 @@ header nav ul li a:hover{
     transition: 0.3s;
 }
 .titulo{
-    background: url('../img/fundo-inicio.jpeg') center center no-repeat;
+    background: url('../img/fundo-inicio-novo.jpg') center center no-repeat;
     background-size: cover;
     background-color: var(--cor-do-video);
     height: 540px;
@@ -94,7 +94,7 @@ header nav ul li a:hover{
     padding: 10px;
 }
 .video{
-    background: url('../img/parte-do-fundo-video.jpg') center center no-repeat;
+    background: url('../img/parte-do-fundo-video-novo.jpg') center center no-repeat;
     background-size: cover;
     width: 100%;
     height: 600px;
