--- a/src/paginas/arte-indigena.css
+++ b/src/paginas/arte-indigena.css
@@ -201,3 +201,55 @@
    font-weight: 500;
    font-size: 30px;
 }
+
+
+@media (max-width:500px){
+    .informacoes{
+        text-align: center;
+    }
+    .informacoes h1{
+        font-size: 30px;
+    }
+    .informacoes p{
+        font-size: 20px;
+        width: 300px;
+    }
+    .imagem-ceramica img{
+        width: 100%;
+        border-radius: 0px;
+    }
+    .segundo-texto{
+        padding: 10px;
+        height: 400px;
+    }
+    .segundo-texto p{
+        font-size: 20px;
+        width: 300px;
+        margin-bottom: 20px;
+    }
+    .imagem-com-descricao img{
+        width: 100%;
+        height: 380px;
+    }
+    .texto-sobre-historia{
+        width: 100%;
+    }
+    .texto-sobre-historia p{
+        width: 300px;
+        font-size: 20px;
+    }
+    .imagem-com-descricao .info {
+        width: 100%;
+        text-align: center;
+    }
+    .vaso-com-rosto img {
+        width: 100%;
+    }
+    .texto-sobre-o-vaso-com-rosto{
+        height: 550px;
+    }
+    .texto-sobre-o-vaso-com-rosto p{
+        width: 300px;
+        font-size: 20px;
+    }
+}
