--- a/src/paginas/arte-indigena.css
+++ b/src/paginas/arte-indigena.css
@@ -230,6 +230,7 @@
     .imagem-com-descricao img{
         width: 100%;
         height: 380px;
+        border-radius: 0px;
     }
     .texto-sobre-historia{
         width: 100%;
@@ -244,6 +245,7 @@
     }
     .vaso-com-rosto img {
         width: 100%;
+        border-radius: 0px;
     }
     .texto-sobre-o-vaso-com-rosto{
         height: 550px;
