--- a/src/paginas/arte-indigena.css
+++ b/src/paginas/arte-indigena.css
@@ -41,7 +41,10 @@
 .informacoes h1{
     margin-top: 20px;
     font-size: 50px;
-    
+    font-family: "Pattaya", sans-serif;
+}
+.informacoes span{
+    font-family: "Abril Fatface", serif;
 }
 .informacoes p{
     font-size: 34px;
@@ -69,7 +72,15 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 300px;
+    height: 400px;
+    flex-direction: column;
+}
+.segundo-texto h1{
+    margin-top: 20px;
+    font-size: 50px;
+}
+.segundo-texto span{
+    font-family: "Abril Fatface", serif;
 }
 .segundo-texto p{
     font-size: 30px;
@@ -173,16 +184,24 @@
     font-size: 30px;
 }
 .vaso-com-rosto{
-    
+    flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 500px;
+    margin-bottom: 50px;
 }
 .vaso-com-rosto img{
     width: 500px;
     height: 400px;
     border-radius: 10px;
+}
+.vaso-com-rosto .info{
+    margin-right: 300px;
+    margin-top: 10px;
+}
+.vaso-com-rosto .info p{
+    font-size: 20px;
 }
 .texto-sobre-o-vaso-com-rosto{
     width: 100%;
@@ -200,6 +219,7 @@
 .texto-sobre-o-vaso-com-rosto p span{
    font-weight: 500;
    font-size: 30px;
+   font-family: "Abril Fatface", serif;
 }
 .jarro-com-copos{
     width: 100%;
