--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -129,7 +129,7 @@
     header nav ul li a{
         padding: 10px;
         height: 40px;
-        width: 150px;
+        /* width: 150px; */
         border-bottom: 2px solid rgb(10, 10, 10);
         display: flex;
         align-items: center;
