--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -115,6 +115,7 @@
     }
     header nav{
         border-bottom-left-radius: 10px;
+        position: relative;
     }
     header nav ul{
         display: none;
