--- a/src/paginas/comidas-tipicas.css
+++ b/src/paginas/comidas-tipicas.css
@@ -232,7 +232,7 @@
 }
 .pamonha{
     width: 100%;
-    height: 100%;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -241,8 +241,12 @@
 }
 .pamonha img{
     border-radius: 10px;
+    width: 500px;
 }
-.texto-2 h2{
+.beiju{
+    height: 100px;
+}
+.pamonha h2{
     font-family: "Pattaya", sans-serif;
     font-size: 35px;
     margin-bottom: 20px;
