--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -114,15 +114,22 @@
         margin-top: 20px;
     }
     header nav{
-        border-bottom-left-radius: 10px;
-        position: relative;
+        /* border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px; */
+        position: absolute;
+        width:100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
     }
     header nav ul{
         display: none;
         gap: 30px;
         align-items: center;
         justify-content: center;
-        margin-right: 140px;
+        
+        /* margin-right: 140px; */
         padding-bottom: 30px;
        
     }
@@ -321,6 +328,10 @@
     
 }
 @media (max-width:500px){
+    .header{}
+    .header nav{
+
+    }
     .informacao-arma .descricao-1{
         height: 400px;
     }
