--- a/src/paginas/comidas-tipicas.css
+++ b/src/paginas/comidas-tipicas.css
@@ -196,6 +196,7 @@
     font-size: 25px;
     width: 880px;
     text-align: justify;
+    
 }
 .texto-1 p span{
     font-size: 30px;
@@ -265,14 +266,18 @@
 @media (max-width: 500px){
     .texto-1{
         height: 100%;
+        height: 100%;
         padding: 20px;
     }
     .texto-1 h1{
-        font-size: 30px;
+        font-size: 25px;
     }
     .texto-1 p{
-        width: 340px;
-       
+        width: 100%;
+        text-align: center;
+    }
+    .texto-1 p span{
+        text-align: center;
     }
     .texto{
         display: flex;
@@ -280,11 +285,16 @@
         text-align: center;
     }
     .texto h1{
-        font-size: 30px;
+        font-size: 25px;
 
     }
     .texto-2 p{
         width: 330px;
+        text-align: center;
+    }
+    .pamonha h2{
+        text-align: center;
+        font-size: 35px;
     }
     .pamonha img{
         width: 100%;
