--- a/src/paginas/arte-indigena.css
+++ b/src/paginas/arte-indigena.css
@@ -178,7 +178,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 300px;
+    height: 400px;
 }
 .texto-sobre-historia p{
     width: 800px;
@@ -322,8 +322,9 @@
         width: 100%;
         margin-left: 70%;
     }
-    .peixe img,.tartaruga img{
+    .peixe img,.tartaruga img, .jarro-com-copos img{
         width: 100%;
+        border-radius: 0px;
     }
     .imagem-com-descricao img{
         width: 100%;
@@ -333,10 +334,13 @@
     
     .texto-sobre-historia{
         width: 100%;
+        height: 100%;
+        padding: 20px;
     }
     .texto-sobre-historia p{
         width: 300px;
         font-size: 20px;
+        
     }
     .imagem-com-descricao .info {
         width: 100%;
