--- a/src/paginas/comidas-tipicas.css
+++ b/src/paginas/comidas-tipicas.css
@@ -25,6 +25,7 @@
 @media (max-width: 1400px){
     .comida-inicio{
         height: 400px;
+
     }
 }
 .comida-inicio h1{
@@ -151,6 +152,7 @@
     }
     .comida-inicio h1{
         font-size: 25px;
+        width: 300px;
     }
     .culinaria .comida.milho .img , .culinaria .comida.pamonha .img ,.culinaria .comida.tapioca .img,.culinaria .comida.mandioca .img,.culinaria .comida.muqueca-de-paixe .img,.culinaria .comida.tacaca .img{
       width: 300px;
